--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Anta&family=Fredoka:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <script
@@ -30,9 +30,9 @@
             <span>QMUL ROBOTICS</span>
           </div>
           <div class="flex2">
-            <span><a>CONTRIBUTORS</a></span>
-            <span><a>MATERIALS</a></span>
-            <span><a>BUILD-PROCEDURE</a></span>
+            <span class="under-line"><a href="#">CONTRIBUTORS</a></span>
+            <span class="under-line"><a href="#">MATERIALS</a></span>
+            <span class="under-line"><a href="#">BUILD-PROCEDURE</a></span>
           </div>
         </dv>
       </div>
@@ -52,9 +52,98 @@
           ><i class="fa-solid fa-arrow-down-long"></i
         ></span>
       </div>
-
-      <!-- <img src="./images/try3.webp" /> -->
     </section>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+    <br />
+    <br />
+    <br />
+
+    <br />
+    <br />
+    <section id="product">
+      <h2 class="anta-regular">
+        Low cost, 3D printed, EGM controlled hand prosthesis with haptic
+        feedback
+      </h2>
+      <input type="radio" name="slider" id="s1" checked />
+      <input type="radio" name="slider" id="s2" />
+      <input type="radio" name="slider" id="s3" />
+
+      <label for="s1" id="slider1">
+        <div class="card">
+          <img class="card-img" src="./images/nature1.jpg" />
+          <div class="card-body">
+            <div class="card-title">EMG APPROACH</div>
+            <div class="card-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+          </div>
+        </div>
+      </label>
+      <label for="s2" id="slider2">
+        <div class="card">
+          <img src="./images/nature2.jpg" />
+          <div class="card-body">
+            <div class="card-title">SENSING / FEEDBACK</div>
+            <div class="card-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+          </div>
+        </div>
+      </label>
+      <label for="s3" id="slider3">
+        <div class="card">
+          <img src="./images/nature3.jpg" />
+          <div class="card-body">
+            <div class="card-title">MECHANICAL DESGIN</div>
+            <div class="card-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+          </div>
+        </div>
+      </label>
+    </section>
+    <br />
+    <br />
+    <br />
     <script src="./index.js"></script>
   </body>
 </html>
