Add video section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     ></script>
   </head>
   <body>
+    <!-- NAVBAR -->
     <nav id="navbar">
       <div class="navbar open-sans">
         <dv class="flex1">
@@ -30,14 +31,17 @@
             <span>QMUL ROBOTICS</span>
           </div>
           <div class="flex2">
-            <span class="under-line"><a href="#">CONTRIBUTORS</a></span>
+            <span class="under-line"><a href="#product-tag">PRODUCT</a></span>
             <span class="under-line"><a href="#">MATERIALS</a></span>
-            <span class="under-line"><a href="#">BUILD-PROCEDURE</a></span>
+            <span class="under-line"><a href="#">CONTRIBUTORS</a></span>
           </div>
         </dv>
       </div>
     </nav>
 
+    <!-- END OF NAVBAR -->
+
+    <!-- HERO SECTION -->
     <section id="hero">
       <div class="hero-container">
         <img src="./images/try4.jpg" />
@@ -54,28 +58,12 @@
       </div>
     </section>
 
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+    <!-- END OF HERO SECTION -->
 
-    <br />
-    <br />
-    <br />
+    <!-- PRODUCT SECTION-->
 
-    <br />
-    <br />
     <section id="product">
-      <h2 class="anta-regular">
+      <h2 id="product-tag" class="anta-regular">
         Low cost, 3D printed, EGM controlled hand prosthesis with haptic
         feedback
       </h2>
@@ -141,6 +129,39 @@
         </div>
       </label>
     </section>
+
+    <!-- END OF PRODUCT SECTION-->
+    <section id="video-section">
+      <h2 class="anta-regular">Watch it in action</h2>
+
+      <iframe
+        id="video"
+        width="800"
+        height="450"
+        allowfullscreen
+        src="https://www.youtube.com/embed/uHgt8giw1LY?si=5xwFAZLAa4SjqI13"
+      >
+      </iframe>
+    </section>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+    <br />
+    <br />
+    <br />
+
     <br />
     <br />
     <br />
