Add contributors, footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
           <div class="flex2">
             <span class="under-line"><a href="#product-tag">PRODUCT</a></span>
             <span class="under-line"><a href="#">MATERIALS</a></span>
-            <span class="under-line"><a href="#">CONTRIBUTORS</a></span>
+            <span class="under-line"
+              ><a href="#contributors-tag">CONTRIBUTORS</a></span
+            >
           </div>
         </dv>
       </div>
@@ -50,7 +52,10 @@
         </div>
         <br />
         <br />
-        <button class="hero-btn roboto-regular">View Prototype</button>
+        <a href="#product-tag"
+          ><button class="hero-btn roboto-regular">View Prototype</button></a
+        >
+
         <br /><br /><br />
         <span class="arrow-icon"
           ><i class="fa-solid fa-arrow-down-long"></i
@@ -144,27 +149,119 @@
       </iframe>
     </section>
 
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+    <section id="contributors">
+      <h2 id="contributors-tag" class="anta-regular">Contributors</h2>
 
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+      <div class="contributors-container">
+        <div class="contributor-card">
+          <img class="contributor-img" src="./images/daniel.jpg" />
+          <h3 class="contributor-name">Daniel Pawlak</h3>
+          <div class="social-icons">
+            <span>
+              <a href="mailto:d.pawlak@se21.qmul.ac.uk"
+                ><i class="icons fa-solid fa-envelope"></i
+              ></a>
+            </span>
+            <span>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/daniel-pawlak-7aa021201/"
+              >
+                <i class="icons fa-brands fa-linkedin-in"></i
+              ></a>
+            </span>
+          </div>
+        </div>
+        <div class="contributor-card">
+          <img class="contributor-img" src="./images/ryan.jpg" />
+          <h3 class="contributor-name">Ryan White</h3>
+          <div class="social-icons">
+            <span>
+              <a href="mailto:r.white@se20.qmul.ac.uk"
+                ><i class="icons fa-solid fa-envelope"></i
+              ></a>
+            </span>
+            <span>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/ryan-white020702/"
+              >
+                <i class="icons fa-brands fa-linkedin-in"></i
+              ></a>
+            </span>
+          </div>
+        </div>
+        <div class="contributor-card">
+          <img class="contributor-img" src="./images/placeholder-img.jpeg" />
+          <h3 class="contributor-name">David J. Bazan Ticse</h3>
+          <div class="social-icons">
+            <span>
+              <a href="mailto:d.j.bazanticse@se21.qmul.ac.uk"
+                ><i class="icons fa-solid fa-envelope"></i
+              ></a>
+            </span>
+            <span>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/david-bazan-ticse/"
+              >
+                <i class="icons fa-brands fa-linkedin-in"></i
+              ></a>
+            </span>
+          </div>
+        </div>
+        <div class="contributor-card">
+          <img class="contributor-img" src="./images/placeholder-img.jpeg" />
+          <h3 class="contributor-name">Yash Rana Kumar</h3>
+          <div class="social-icons">
+            <span>
+              <a href="mailto:y.r.kumar@se21.qmul.ac.uk"
+                ><i class="icons fa-solid fa-envelope"></i
+              ></a>
+            </span>
+            <span>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/yash-rana-kumar-988a86252/"
+              >
+                <i class="icons fa-brands fa-linkedin-in"></i
+              ></a>
+            </span>
+          </div>
+        </div>
+        <div class="contributor-card">
+          <img class="contributor-img" src="./images/placeholder-img.jpeg" />
+          <h3 class="contributor-name">Jayme Fitzgerald</h3>
+          <div class="social-icons">
+            <span>
+              <a href="mailto:j.fitzgerald@se21.qmul.ac.uk"
+                ><i class="icons fa-solid fa-envelope"></i
+              ></a>
+            </span>
+            <span>
+              <a target="_blank">
+                <i class="icons fa-brands fa-linkedin-in"></i
+              ></a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <br />
-    <br />
-    <br />
+    <footer id="footer">
+      <div class="footer">
+        <a href="https://github.com/YashRana03" target="_blank"
+          ><button id="github">
+            Follow me
+            <i id="github-logo" class="fa-brands fa-github"></i></button
+        ></a>
+        <p class="copyright">
+          Made by YRK
+          <i class="fa-regular fa-copyright" style="color: #98a2b3"></i> 2024
+        </p>
+      </div>
+    </footer>
 
-    <br />
-    <br />
-    <br />
     <script src="./index.js"></script>
   </body>
 </html>
