--- a/index.html
+++ b/index.html
@@ -18,21 +18,19 @@
   </head>
   <body>
     <!-- NAVBAR -->
+
     <nav id="navbar">
       <div class="navbar open-sans">
         <dv class="flex1">
-          <div class="flex2">
-            <img
-              src="./images/logo5.png"
-              id="qmul-logo"
-              width="55"
-              height="55"
-            />
+          <!-- <div class="flex2"> -->
+          <div class="flex3">
+            <img src="./images/logo5.png" id="qmul-logo" />
             <span>QMUL ROBOTICS</span>
           </div>
+          <!-- </div> -->
           <div class="flex2">
             <span class="under-line"><a href="#product-tag">PRODUCT</a></span>
-            <span class="under-line"><a href="#">MATERIALS</a></span>
+            <!-- <span class="under-line"><a href="#">MATERIALS</a></span> -->
             <span class="under-line"
               ><a href="#contributors-tag">CONTRIBUTORS</a></span
             >
@@ -44,11 +42,12 @@
     <!-- END OF NAVBAR -->
 
     <!-- HERO SECTION -->
+
     <section id="hero">
       <div class="hero-container">
         <img src="./images/try4.jpg" />
         <div class="hero-text">
-          <h2>THE FUTURE OF PROSTETHICS IS HERE</h2>
+          <h1>THE FUTURE OF PROSTETHICS IS HERE</h1>
         </div>
         <br />
         <br />
@@ -61,6 +60,12 @@
           ><i class="fa-solid fa-arrow-down-long"></i
         ></span>
       </div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
     </section>
 
     <!-- END OF HERO SECTION -->
@@ -68,86 +73,96 @@
     <!-- PRODUCT SECTION-->
 
     <section id="product">
-      <h2 id="product-tag" class="anta-regular">
-        Low cost, 3D printed, EGM controlled hand prosthesis with haptic
-        feedback
-      </h2>
-      <input type="radio" name="slider" id="s1" checked />
-      <input type="radio" name="slider" id="s2" />
-      <input type="radio" name="slider" id="s3" />
+      <div class="product">
+        <h2 id="product-tag" class="anta-regular">
+          Low cost, 3D printed, EGM controlled hand prosthesis with haptic
+          feedback
+        </h2>
+        <input type="radio" name="slider" id="s1" checked />
+        <input type="radio" name="slider" id="s2" />
+        <input type="radio" name="slider" id="s3" />
 
-      <label for="s1" id="slider1">
-        <div class="card">
-          <img class="card-img" src="./images/nature1.jpg" />
-          <div class="card-body">
-            <div class="card-title">EMG APPROACH</div>
-            <div class="card-text">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
+        <label for="s1" id="slider1">
+          <div class="card">
+            <img class="card-img" src="./images/nature1.jpg" />
+            <div class="card-body">
+              <div class="card-title">EMG APPROACH</div>
+              <div class="card-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-      </label>
-      <label for="s2" id="slider2">
-        <div class="card">
-          <img src="./images/nature2.jpg" />
-          <div class="card-body">
-            <div class="card-title">SENSING / FEEDBACK</div>
-            <div class="card-text">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
+        </label>
+        <label for="s2" id="slider2">
+          <div class="card">
+            <img src="./images/nature2.jpg" />
+            <div class="card-body">
+              <div class="card-title">TACTILE / HAPTIC FEEDBACK</div>
+              <div class="card-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-      </label>
-      <label for="s3" id="slider3">
-        <div class="card">
-          <img src="./images/nature3.jpg" />
-          <div class="card-body">
-            <div class="card-title">MECHANICAL DESGIN</div>
-            <div class="card-text">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
+        </label>
+        <label for="s3" id="slider3">
+          <div class="card">
+            <img src="./images/nature3.jpg" />
+            <div class="card-body">
+              <div class="card-title">MECHANICAL DESGIN</div>
+              <div class="card-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-      </label>
+        </label>
+      </div>
     </section>
 
     <!-- END OF PRODUCT SECTION-->
+
+    <!-- VIDEO SECTION-->
+
     <section id="video-section">
       <h2 class="anta-regular">Watch it in action</h2>
 
       <iframe
         id="video"
-        width="800"
-        height="450"
         allowfullscreen
         src="https://www.youtube.com/embed/uHgt8giw1LY?si=5xwFAZLAa4SjqI13"
       >
       </iframe>
     </section>
+
+    <!-- END OF VIDEO SECTION-->
+
+    <!-- CONTRIBUTORS SECTION-->
 
     <section id="contributors">
       <h2 id="contributors-tag" class="anta-regular">Contributors</h2>
@@ -248,6 +263,9 @@
       </div>
     </section>
 
+    <!-- END OF CONTRIBUTORS SECTION-->
+
+    <!-- FOOTER -->
     <footer id="footer">
       <div class="footer">
         <a href="https://github.com/YashRana03" target="_blank"
@@ -261,6 +279,8 @@
         </p>
       </div>
     </footer>
+
+    <!-- END OF FOOTER-->
 
     <script src="./index.js"></script>
   </body>
