Replace images, video

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prostethics</title>
+    <title>Prosthetics</title>
 
     <link href="./style.css" rel="stylesheet"/ >
 
@@ -71,7 +71,7 @@
       <div class="hero-container">
         <img src="./images/try4.jpg" />
         <div class="hero-text">
-          <h1>THE FUTURE OF PROSTETHICS IS HERE</h1>
+          <h1>THE FUTURE OF PROSTHETICS IS HERE</h1>
         </div>
         <br />
         <br />
@@ -102,19 +102,16 @@
 
         <label for="s1" id="slider1">
           <div class="card">
-            <img class="card-img" src="./images/nature1.jpg" />
+            <img class="card-img" src="./images/emg-system-new.jpeg" />
             <div class="card-body">
               <div class="card-title">EMG APPROACH</div>
               <div class="card-text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  The EMG-controlled system utilizes surface EMG sensors
+                  connected to an Arduino for processing muscle signals. These
+                  signals serve as input for a basic Rolling Average function
+                  (Moving Average). The system employs a simple Thresholding
+                  algorithm to control servo motors.
                 </p>
               </div>
             </div>
@@ -122,19 +119,17 @@
         </label>
         <label for="s2" id="slider2">
           <div class="card">
-            <img src="./images/nature2.jpg" />
+            <img src="./images/haptic-system.jpeg" />
             <div class="card-body">
               <div class="card-title">TACTILE / HAPTIC FEEDBACK</div>
               <div class="card-text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  The haptic feedback system works by receiving information from
+                  tactile sensors on the tip of the fingers which feed into a
+                  vibration and servo motor located on a wearable armband to
+                  simulate a sense of touch. The soft tactile sensors are self
+                  made using magnet hall effect sensors that are encased in a
+                  self made mould using silicone.
                 </p>
               </div>
             </div>
@@ -142,19 +137,15 @@
         </label>
         <label for="s3" id="slider3">
           <div class="card">
-            <img src="./images/nature3.jpg" />
+            <img src="./images/mechanical-section1.jpeg" />
             <div class="card-body">
               <div class="card-title">MECHANICAL DESGIN</div>
               <div class="card-text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  The mechanical design focused on being cheep and print in
+                  place with the idea of mass production as a focus. This
+                  resulted in print in place hinges being incorperated in the
+                  design with simple rubber band and wire for the torque.
                 </p>
               </div>
             </div>
@@ -173,9 +164,18 @@
       <iframe
         id="video"
         allowfullscreen
-        src="https://www.youtube.com/embed/uHgt8giw1LY?si=5xwFAZLAa4SjqI13"
+        src="https://www.youtube.com/embed/2KyZXNUfAVE?si=xk9NJ8CrsDxDmyAe"
       >
       </iframe>
+      <!-- <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/2KyZXNUfAVE?si=xk9NJ8CrsDxDmyAe"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe> -->
     </section>
 
     <!-- END OF VIDEO SECTION-->
@@ -225,7 +225,7 @@
           </div>
         </div>
         <div class="contributor-card">
-          <img class="contributor-img" src="./images/placeholder-img.jpeg" />
+          <img class="contributor-img" src="./images/david.jpeg" />
           <h3 class="contributor-name">David J. Bazan Ticse</h3>
           <div class="social-icons">
             <span>
@@ -244,7 +244,7 @@
           </div>
         </div>
         <div class="contributor-card">
-          <img class="contributor-img" src="./images/placeholder-img.jpeg" />
+          <img class="contributor-img" src="./images/yash.jpeg" />
           <h3 class="contributor-name">Yash Rana Kumar</h3>
           <div class="social-icons">
             <span>
@@ -272,7 +272,10 @@
               ></a>
             </span>
             <span>
-              <a target="_blank">
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/jaymie-fitzgerald-5a08872b8/"
+              >
                 <i class="icons fa-brands fa-linkedin-in"></i
               ></a>
             </span>
