--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <dv class="flex1">
           <!-- <div class="flex2"> -->
           <div class="flex3">
-            <img src="./images/logo5.png" id="qmul-logo" />
+            <img src="./images/logo.png" id="qmul-logo" />
             <span>QMUL ROBOTICS</span>
           </div>
           <!-- </div> -->
@@ -69,7 +69,7 @@
 
     <section id="hero">
       <div class="hero-container">
-        <img src="./images/try4.jpg" />
+        <img src="./images/hero-img.jpg" />
         <div class="hero-text">
           <h1>THE FUTURE OF PROSTHETICS IS HERE</h1>
         </div>
@@ -102,21 +102,21 @@
 
         <label for="s1" id="slider1">
           <div class="card">
-            <img class="card-img" src="./images/emg-system-new.jpeg" />
+            <img src="./images/mechanical-section1.jpeg" />
             <div class="card-body">
-              <div class="card-title">EMG APPROACH</div>
+              <div class="card-title">MECHANICAL DESGIN</div>
               <div class="card-text">
                 <p>
-                  The EMG-controlled system utilizes surface EMG sensors
-                  connected to an Arduino for processing muscle signals. These
-                  signals serve as input for a basic Rolling Average function
-                  (Moving Average). The system employs a simple Thresholding
-                  algorithm to control servo motors.
+                  The mechanical design focused on being cheep and print in
+                  place with the idea of mass production as a focus. This
+                  resulted in print in place hinges being incorperated in the
+                  design with simple rubber band and wire for the torque.
                 </p>
               </div>
             </div>
           </div>
         </label>
+
         <label for="s2" id="slider2">
           <div class="card">
             <img src="./images/haptic-system.jpeg" />
@@ -135,17 +135,19 @@
             </div>
           </div>
         </label>
+
         <label for="s3" id="slider3">
           <div class="card">
-            <img src="./images/mechanical-section1.jpeg" />
+            <img class="card-img" src="./images/emg-system-new.jpeg" />
             <div class="card-body">
-              <div class="card-title">MECHANICAL DESGIN</div>
+              <div class="card-title">EMG APPROACH</div>
               <div class="card-text">
                 <p>
-                  The mechanical design focused on being cheep and print in
-                  place with the idea of mass production as a focus. This
-                  resulted in print in place hinges being incorperated in the
-                  design with simple rubber band and wire for the torque.
+                  The EMG-controlled system utilizes surface EMG sensors
+                  connected to an Arduino for processing muscle signals. These
+                  signals serve as input for a basic Rolling Average function
+                  (Moving Average). The system employs a simple Thresholding
+                  algorithm to control servo motors.
                 </p>
               </div>
             </div>
@@ -167,15 +169,6 @@
         src="https://www.youtube.com/embed/2KyZXNUfAVE?si=xk9NJ8CrsDxDmyAe"
       >
       </iframe>
-      <!-- <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/2KyZXNUfAVE?si=xk9NJ8CrsDxDmyAe"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe> -->
     </section>
 
     <!-- END OF VIDEO SECTION-->
@@ -244,7 +237,7 @@
           </div>
         </div>
         <div class="contributor-card">
-          <img class="contributor-img" src="./images/yash.jpeg" />
+          <img class="contributor-img" src="./images/yash.jpg" />
           <h3 class="contributor-name">Yash Rana Kumar</h3>
           <div class="social-icons">
             <span>
